tweaking save image panel. fixed issue where there was a delay after touching image on iOS (listen for touch event not mouse event).

--- a/HTML5/EaselJS/FollowMultiTouch/styles/styles.css
+++ b/HTML5/EaselJS/FollowMultiTouch/styles/styles.css
@@ -233,9 +233,9 @@ img
 {
 	width:100%;
 	text-align:left;
-	padding-top:1px;
-	padding-bottom:1px;
-	font-size:12px;
+	padding-top:2px;
+	padding-bottom:2px;
+	font-size:14px;
 }
 
 #savePanelCloseSpan
@@ -246,16 +246,23 @@ img
 	
 }
 
+#saveInstructionsSpan
+{
+	padding-left:5px;
+	color:#363636;
+}
+
 #savePanelCloseLink
 {
 	text-decoration:none;
 	color:#363636;
 }
 
-#saveInstructionsSpan
+#saveImage
 {
-	padding-left:5px;
-	color:#363636;
+	border-style:solid;
+	border-color:#A6A6A6;
+	border-width:1px;
 }
 
 .bottomButton
